--- a/FFT/README
+++ b/FFT/README
@@ -5,4 +5,4 @@ path.
 
 Here is an example picture of the FFT application with m=4.
 
-![image](https://github.com/thewayonly/images/blob/master/FFT.png)
+![image](https://raw.githubusercontent.com/thewayonly/images/master/FFT.png)
