--- a/RANDOM/README
+++ b/RANDOM/README
@@ -1,1 +1,1 @@
-
+We generate various randomly generated workflows. There workflow's structure may differ from each other with the task loads and resource requirements varing between varied range set for tests.
